--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,3 +1,3 @@
 github: [cubxxw, surftocat]
-liberapay: "https://liberapay.com/xiongxinwei/donate"
+liberapay: "xiongxinwei/donate"
 custom: ["https://www.paypal.me/cubxxw", nsddd.top]
