--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,3 +1,4 @@
 github: [cubxxw, surftocat]
 liberapay: "xiongxinwei/donate"
+paypal: "paypal.me/cubxxw"
 custom: ["https://www.paypal.me/cubxxw", nsddd.top]
