--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,4 +1,4 @@
-github: [cubxxw, surftocat]
+github: [cubxxw]
 liberapay: "xiongxinwei/donate"
-paypal: "paypal.me/cubxxw"
+paypal: ["paypal.me/cubxxw", paypal.me]
 custom: ["https://www.paypal.me/cubxxw", nsddd.top]
